thumbnail aspect ration fixed, no longer distorts

--- a/css/newproject.css
+++ b/css/newproject.css
@@ -13,6 +13,12 @@ img {
     border:none;
 }
 
+.projectImg {
+	height:225px; 
+	width:225px;
+	object-fit: contain;
+}
+
 @font-face {
     font-family: 'montserratregular';
     src: url('fonts/Montserrat-Regular-webfont.eot');
